Aulway test (#9)
* aulway: add cors

* aulway: add buy ticket

* aulway: add qrcode to ticket
