# docs/swagger.json
@@ -402,7 +402,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Allows a user to purchase a ticket for a specific route using card details.",
+                "description": "Allows a user to purchase one or more tickets for a specific route using card details.",
                 "consumes": [
                     "application/json"
                 ],
@@ -412,7 +412,7 @@
                 "tags": [
                     "Tickets"
                 ],
-                "summary": "Buy a ticket",
+                "summary": "Buy tickets",
                 "parameters": [
                     {
                         "type": "string",
@@ -423,17 +423,29 @@
                     },
                     {
                         "type": "string",
-                        "description": "Payment method id",
+                        "description": "Payment method ID",
                         "name": "payment_id",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "description": "Buy Ticket Request Body",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.BuyTicketRequest"
+                        }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Successfully purchased ticket",
+                    "200": {
+                        "description": "Successfully purchased tickets",
                         "schema": {
-                            "$ref": "#/definitions/domain.Ticket"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.Ticket"
+                            }
                         }
                     },
                     "400": {
@@ -836,6 +848,14 @@
                 },
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "model.BuyTicketRequest": {
+            "type": "object",
+            "properties": {
+                "quantity": {
+                    "type": "integer"
                 }
             }
         },
