# internal/handler/ticket/model/ticket.go
@@ -1,1 +1,5 @@
 package model
+
+type BuyTicketRequest struct {
+	Quantity int `json:"quantity"`
+}
